--- a/web_application/templates/profile.html
+++ b/web_application/templates/profile.html
@@ -27,7 +27,7 @@
     <div class="max-w-3xl w-full mx-auto bg-sky-200 rounded-lg  overflow-hidden mt-8 mb-8 p-6">
         <div class="flex flex-col items-center mb-8">
             <div class="rounded-full bg-blue-500 h-16 w-16 flex items-center justify-center mb-4">
-                <span class="text-white text-2xl font-bold">{{ logo }}</span>
+                <span class="text-white text-2xl font-bold">{{ username[0] | upper }}</span>
             </div>
         </div>
         <h3 class="text-xl font-semibold text-gray-800 mb-4">UserName: {{ username }}</h3>
